change default priority of cards and change route of getting cards
